<?xml version="1.0"?>
<package>
  <name>ccmslam</name>
  <version>1.0.0</version>
  <description>ETHZ V4RL Multi Agent Centralized Collaborative Monocular SLAM Framework (CCM-SLAM)</description>

  <maintainer email="pschmuck@ethz.ch"></maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>ccmslam_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2_catkin</build_depend>
  <build_depend>opencv3_catkin</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>ccmslam_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2_catkin</run_depend>
  <run_depend>opencv3_catkin</run_depend>

  <export>
  </export>
</package>
