<?xml version="1.0"?>
<package>
  <name>ccmslam</name>
  <version>1.0.0</version>
  <description>ETHZ V4RL Multi Agent Centralized Collaborative Monocular SLAM Framework (CCM-SLAM)</description>

  <maintainer email="pschmuck@ethz.ch"> </maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>ccmslam_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv3_catkin</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>g2o_catkin</build_depend>
  <build_depend>dbow2_catkin</build_depend>
  <build_depend>coxgraph_mod</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>ccmslam_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv3_catkin</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>g2o_catkin</run_depend>
  <run_depend>dbow2_catkin</run_depend>
  <run_depend>voxgraph_msgs</run_depend>
  <run_depend>coxgraph_mod</run_depend>

  <export>
  </export>
</package>
